improving detailed basket_json output
