# lib/kantox_web/controllers/basket_json.ex
@@ -2,9 +2,11 @@ defmodule KantoxWeb.BasketJSON do
   @doc """
   Renders the basket processing result.
   """
-  def index(%{total: total, status: status}) do
+  def index(%{result: result, status: status}) do
     %{
-      total: total,
+      total: result.total,
+      full_price: result.full_price,
+      off_price: result.off_price,
       status: status
     }
   end
